# a800xl-utils

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs
.cargo/: config.toml
.devcontainer/: devcontainer.json
examples/: 2048.rs  clrscr.rs  cls.rs  console.rs  draw.rs  files.rs  gfx.rs  heap.rs  kbdinfo.rs  mini.rs
examples/data/: dos2d64.atr
src/: cio.S  cio.rs  consts.rs  fs.rs  heap.rs  lib.rs
src/screen/: mod.rs
