[package]
name = "a800xl-utils"
version = "0.1.4"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/mrk-its/a800xl-utils"
description = "misc utilities for mos-a800xl-none target (Atari 800XL/XE)"
documentation = "https://docs.rs/a800xl-utils"
keywords = ["mos", "llvm-mos", "atari", "6502", "8-bit"]
readme = "README.md"
exclude = ["examples/data/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
docs-rs = []

[package.metadata.docs.rs]
features = [ "docs-rs" ]

[build-dependencies]
cc = "1"

[dependencies]
volatile-register = "0"
ufmt = "0"
ufmt-write = "0"
ufmt-stdio = "0"

[dev-dependencies]

[profile.dev]
lto = true
opt-level = 1

[profile.release]
lto = true
opt-level = "s"

[[example]]
name = "2048"

[[example]]
name = "cls"

[[example]]
name = "console"

[[example]]
name = "draw"

[[example]]
name = "files"

[patch.crates-io]
ufmt = {git="https://github.com/mrk-its/ufmt", branch="ptr_width_16_fix"}
ufmt-write = {git = "https://github.com/mrk-its/ufmt", branch="ptr_width_16_fix"}
